fix(witness tab): Layout broken due to new checkbox

--- a/src/popup/pages/app-container/home/governance/witness-tab/witness-tab.component.scss
+++ b/src/popup/pages/app-container/home/governance/witness-tab/witness-tab.component.scss
@@ -35,6 +35,7 @@
 
       .switches-panel {
         display: flex;
+        justify-content: space-between;
       }
     }
 
